--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>This is FRONTEND</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-	<div id="root"></div>
+    <div id="cube1">
+        <div id="cube2">
+            <div id="cube3">
+                <div id="cube4">
+                    <div id="cube5">
+                        <div id="cube6">
+                            <div id="cube7">
+                                <div id="cube8">
+                                    <div id="cube9">
+                                        <div id="cube10">
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
