Position relative / absolute tests

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,5 +61,14 @@
         Modi optio sint quibusdam quos eligendi suscipit ad quia quisquam, qui numquam odit laudantium alias, tempore similique, corporis maxime ducimus omnis. Corporis vel consectetur, asperiores suscipit facilis repudiandae quo voluptates?
         Aspernatur dolorum, saepe reprehenderit similique cum ipsa, eos accusantium culpa ad facere esse enim commodi corrupti ratione beatae consectetur? Corporis dignissimos ipsam nemo asperiores laborum obcaecati error officiis reiciendis est.
     </p>
+    <section>
+        <button>Click me</button>
+    </section>
+    <section>
+        <button>Click me</button>
+    </section>
+    <section>
+        <button>Click me</button>
+    </section>
 </body>
 </html>
