--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,67 +8,58 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <div id="cube1">
-        <div id="cube2">
-            <div id="cube3">
-                <div id="cube4">
-                    <div id="cube5">
-                        <div id="cube6">
-                            <div id="cube7">
-                                <div id="cube8">
-                                    <div id="cube9">
-                                        <div id="cube10">
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero repellat, nostrum assumenda aspernatur numquam laboriosam sed perferendis facilis quia. Ea asperiores maxime similique! Modi eum quae hic placeat animi dicta.
-        Quis reiciendis impedit cum laudantium. Velit dolorem iusto ullam necessitatibus vitae delectus tempora, nobis in eius ipsa earum quasi saepe maiores nemo quidem quis consequuntur, exercitationem placeat eum! Aliquid, iusto?
-        Ipsa numquam fugit iusto saepe laudantium dolorem, temporibus eius laboriosam ea quae doloribus? Odit nam nemo tempore dignissimos hic dolore eum repellat, assumenda reprehenderit animi. Dolor, repellendus. Similique, dicta quo.
-        Corrupti, qui. Consectetur voluptatum iure ab? Exercitationem vitae rem id, vero nemo inventore fugiat. Sunt fuga provident, quam quos inventore iure dolore sapiente omnis praesentium sed pariatur? Asperiores, alias veritatis?
-        Quae, itaque? At minus qui excepturi doloribus voluptatibus est, sequi dolore architecto consectetur inventore possimus nisi modi expedita perspiciatis laudantium, explicabo velit voluptatem ipsam deserunt quas, nobis cupiditate! Aut, fuga.
-        Inventore iste tenetur rerum consequuntur minus, nihil, ducimus ipsa non facilis, quam commodi hic in suscipit nulla possimus atque ratione iure! Ea accusamus nam voluptatem eos commodi eligendi necessitatibus ullam!
-        Atque, possimus, voluptate velit maiores eum illo porro quis ad natus ipsa laboriosam amet nam temporibus, aspernatur corrupti repellat numquam? Velit soluta adipisci quisquam repellat culpa molestiae sapiente, sequi harum?
-        Facere iste, officia officiis mollitia necessitatibus eaque laboriosam eos non sunt voluptate iusto et hic quia ducimus sint. Cum asperiores eveniet quaerat neque praesentium ab ipsa commodi magni ducimus optio?
-        Ipsam expedita ea sequi, ipsum, culpa laudantium vitae ullam voluptas dicta et fugit inventore suscipit aspernatur esse animi enim quasi iste harum atque, dolores similique quae! Aliquam animi ea consequatur.
-        Fugiat culpa rerum vitae. Accusantium dolore doloremque rem? Natus, omnis. Voluptatibus dignissimos earum, corrupti quibusdam nostrum odit pariatur eos officia maiores dolor quidem laborum optio, quis eveniet, numquam laboriosam aliquam!
-        Ea provident laboriosam nemo architecto id nulla pariatur, porro, quia totam incidunt corrupti? Eum eligendi, fuga quibusdam molestias recusandae porro temporibus mollitia hic ab non excepturi magni repellendus numquam debitis?
-        Quae maxime eum rerum odio modi laboriosam dicta architecto quisquam eaque commodi, hic iure natus exercitationem, saepe dolorem sapiente praesentium at consectetur porro? Numquam laudantium vero eveniet porro necessitatibus quam!
-        Consequuntur, quas veritatis! Vero laboriosam nostrum iure corporis quo? Deserunt aliquam ea aliquid dolorem ad excepturi soluta molestiae incidunt, delectus magnam laboriosam, corrupti aspernatur id eligendi maxime, deleniti asperiores qui.
-        Labore laudantium enim nulla quibusdam ut iste, pariatur, officiis itaque eius beatae illum, saepe hic inventore non atque quisquam laborum doloremque sint accusamus adipisci nam! Tempora nemo ullam aperiam eos?
-        Placeat at eaque, repellendus omnis, non, nemo asperiores nulla voluptate quae quaerat aliquid distinctio id a. Natus aliquam asperiores quod saepe quasi adipisci ab quam autem, recusandae, soluta corporis blanditiis!
-        Dolor nobis recusandae ipsum molestias dignissimos aliquid est possimus ipsam, sit voluptatem rem velit laudantium sint, tempora modi. Cumque at non illum impedit quasi veniam id pariatur nostrum. Repellat, cumque.
-        Tempore vitae quibusdam dolor autem ipsam, animi odit. Nostrum, reiciendis et. Doloremque quaerat, corporis laborum dignissimos nobis totam, quibusdam, neque architecto magnam sed mollitia eius placeat labore nemo sequi voluptatum!
-        Totam commodi eligendi quia illum magni molestias dolor, cum deleniti nesciunt, amet est suscipit dignissimos atque iure quam minus iste officiis voluptatum temporibus vero? Minus beatae illum delectus deserunt facere.
-        Labore tenetur deserunt voluptatibus consectetur. Vel culpa soluta ipsa adipisci pariatur cum facilis sint, inventore esse architecto placeat hic ipsum necessitatibus quisquam. Aliquid alias earum molestias, natus blanditiis nisi debitis?
-        Aspernatur quidem quas quod accusantium saepe, magnam reprehenderit modi enim non laudantium ullam quam at odio, eveniet, quasi veniam deserunt impedit neque suscipit. Quas eum et rem sint cupiditate accusantium.
-        Quasi, temporibus suscipit repellat necessitatibus voluptas voluptates ducimus repellendus rem voluptatibus tempora quae sequi quod ab nihil! Quos iure sit voluptas sint consequuntur cupiditate non molestias quis, ea illo praesentium.
-        Deserunt deleniti officiis sit modi reprehenderit, numquam, cum asperiores vero fugit quae corporis, id aliquam? Labore sed corrupti ut saepe totam minus vel aliquid, harum praesentium provident minima enim dolor.
-        Quaerat porro quo consectetur omnis reiciendis dignissimos laborum accusamus, voluptatem nostrum quod exercitationem repellendus delectus ipsa incidunt dolor adipisci similique facilis, placeat, maiores id? Earum officia amet ad ipsum assumenda.
-        Explicabo vitae quae harum suscipit non, odit facilis magnam architecto deserunt dolorem maxime fugiat, cum laudantium et cumque natus obcaecati hic eius ex quasi itaque magni, similique voluptatibus. Dolorem, laudantium!
-        Repellat optio, reprehenderit placeat velit id deserunt error, quaerat sit asperiores vitae facilis corporis eius rem nemo. Quisquam modi culpa soluta voluptatum voluptate, totam possimus consectetur esse? Aperiam, beatae ad?
-        Repudiandae rem architecto quis illum perferendis, culpa omnis modi quod enim eligendi iusto minus aliquid labore dolor corporis optio iste mollitia debitis alias maiores vel reiciendis ullam? Quo, optio nesciunt.
-        Molestias voluptatibus doloremque ab quos doloribus distinctio repellat blanditiis, non earum aspernatur aut sequi laudantium aliquam alias optio repellendus nesciunt odit nihil fugit possimus eum assumenda exercitationem! Repellat, numquam cum.
-        Quae beatae saepe fugiat voluptas vitae amet, harum distinctio labore sunt porro commodi. Reiciendis error facere, accusantium placeat aliquam veritatis alias nesciunt, architecto itaque illo asperiores, sunt iure minus rerum!
-        Modi optio sint quibusdam quos eligendi suscipit ad quia quisquam, qui numquam odit laudantium alias, tempore similique, corporis maxime ducimus omnis. Corporis vel consectetur, asperiores suscipit facilis repudiandae quo voluptates?
-        Aspernatur dolorum, saepe reprehenderit similique cum ipsa, eos accusantium culpa ad facere esse enim commodi corrupti ratione beatae consectetur? Corporis dignissimos ipsam nemo asperiores laborum obcaecati error officiis reiciendis est.
-    </p>
-    <section>
-        <button>Click me</button>
+    <section id="section1">
+        <form>
+            <label for="firstInput" id="firstLabel">Type something nice here:</label><br>
+            <input type="text" id="firstInput" name="firstInput"><br>
+            <label for="secondInput" id="secondLabel">Type something nice here too:</label><br>
+            <input type="text" id="secondInput" name="secondInput">
+        </form>
     </section>
-    <section>
-        <button>Click me</button>
+    <section id="section2">
+        <button id="topLeft">Top left</button>
+        <button id="topRight">Top right</button>
+        <button id="middle">Middle</button>
+        <button id="bottomLeft">Bottom left</button>
+        <button id="bottomRight">Bottom right</button>
     </section>
-    <section>
-        <button>Click me</button>
+    <section id="section3">
+        <h1 id="h1Txt">Nothing to see here</h1>
+        <img src="https://cdn.wallpapersafari.com/55/73/ghY4rc.jpg" alt="Background image">
+    </section>
+    <section id="section4">
+        <p id="longTxt">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero repellat, nostrum assumenda aspernatur numquam laboriosam sed perferendis facilis quia. Ea asperiores maxime similique! Modi eum quae hic placeat animi dicta.
+            Quis reiciendis impedit cum laudantium. Velit dolorem iusto ullam necessitatibus vitae delectus tempora, nobis in eius ipsa earum quasi saepe maiores nemo quidem quis consequuntur, exercitationem placeat eum! Aliquid, iusto?
+            Ipsa numquam fugit iusto saepe laudantium dolorem, temporibus eius laboriosam ea quae doloribus? Odit nam nemo tempore dignissimos hic dolore eum repellat, assumenda reprehenderit animi. Dolor, repellendus. Similique, dicta quo.
+            Corrupti, qui. Consectetur voluptatum iure ab? Exercitationem vitae rem id, vero nemo inventore fugiat. Sunt fuga provident, quam quos inventore iure dolore sapiente omnis praesentium sed pariatur? Asperiores, alias veritatis?
+            Quae, itaque? At minus qui excepturi doloribus voluptatibus est, sequi dolore architecto consectetur inventore possimus nisi modi expedita perspiciatis laudantium, explicabo velit voluptatem ipsam deserunt quas, nobis cupiditate! Aut, fuga.
+            Inventore iste tenetur rerum consequuntur minus, nihil, ducimus ipsa non facilis, quam commodi hic in suscipit nulla possimus atque ratione iure! Ea accusamus nam voluptatem eos commodi eligendi necessitatibus ullam!
+            Atque, possimus, voluptate velit maiores eum illo porro quis ad natus ipsa laboriosam amet nam temporibus, aspernatur corrupti repellat numquam? Velit soluta adipisci quisquam repellat culpa molestiae sapiente, sequi harum?
+            Facere iste, officia officiis mollitia necessitatibus eaque laboriosam eos non sunt voluptate iusto et hic quia ducimus sint. Cum asperiores eveniet quaerat neque praesentium ab ipsa commodi magni ducimus optio?
+            Ipsam expedita ea sequi, ipsum, culpa laudantium vitae ullam voluptas dicta et fugit inventore suscipit aspernatur esse animi enim quasi iste harum atque, dolores similique quae! Aliquam animi ea consequatur.
+            Fugiat culpa rerum vitae. Accusantium dolore doloremque rem? Natus, omnis. Voluptatibus dignissimos earum, corrupti quibusdam nostrum odit pariatur eos officia maiores dolor quidem laborum optio, quis eveniet, numquam laboriosam aliquam!
+            Ea provident laboriosam nemo architecto id nulla pariatur, porro, quia totam incidunt corrupti? Eum eligendi, fuga quibusdam molestias recusandae porro temporibus mollitia hic ab non excepturi magni repellendus numquam debitis?
+            Quae maxime eum rerum odio modi laboriosam dicta architecto quisquam eaque commodi, hic iure natus exercitationem, saepe dolorem sapiente praesentium at consectetur porro? Numquam laudantium vero eveniet porro necessitatibus quam!
+            Consequuntur, quas veritatis! Vero laboriosam nostrum iure corporis quo? Deserunt aliquam ea aliquid dolorem ad excepturi soluta molestiae incidunt, delectus magnam laboriosam, corrupti aspernatur id eligendi maxime, deleniti asperiores qui.
+            Labore laudantium enim nulla quibusdam ut iste, pariatur, officiis itaque eius beatae illum, saepe hic inventore non atque quisquam laborum doloremque sint accusamus adipisci nam! Tempora nemo ullam aperiam eos?
+            Placeat at eaque, repellendus omnis, non, nemo asperiores nulla voluptate quae quaerat aliquid distinctio id a. Natus aliquam asperiores quod saepe quasi adipisci ab quam autem, recusandae, soluta corporis blanditiis!
+            Dolor nobis recusandae ipsum molestias dignissimos aliquid est possimus ipsam, sit voluptatem rem velit laudantium sint, tempora modi. Cumque at non illum impedit quasi veniam id pariatur nostrum. Repellat, cumque.
+            Tempore vitae quibusdam dolor autem ipsam, animi odit. Nostrum, reiciendis et. Doloremque quaerat, corporis laborum dignissimos nobis totam, quibusdam, neque architecto magnam sed mollitia eius placeat labore nemo sequi voluptatum!
+            Totam commodi eligendi quia illum magni molestias dolor, cum deleniti nesciunt, amet est suscipit dignissimos atque iure quam minus iste officiis voluptatum temporibus vero? Minus beatae illum delectus deserunt facere.
+            Labore tenetur deserunt voluptatibus consectetur. Vel culpa soluta ipsa adipisci pariatur cum facilis sint, inventore esse architecto placeat hic ipsum necessitatibus quisquam. Aliquid alias earum molestias, natus blanditiis nisi debitis?
+            Aspernatur quidem quas quod accusantium saepe, magnam reprehenderit modi enim non laudantium ullam quam at odio, eveniet, quasi veniam deserunt impedit neque suscipit. Quas eum et rem sint cupiditate accusantium.
+            Quasi, temporibus suscipit repellat necessitatibus voluptas voluptates ducimus repellendus rem voluptatibus tempora quae sequi quod ab nihil! Quos iure sit voluptas sint consequuntur cupiditate non molestias quis, ea illo praesentium.
+            Deserunt deleniti officiis sit modi reprehenderit, numquam, cum asperiores vero fugit quae corporis, id aliquam? Labore sed corrupti ut saepe totam minus vel aliquid, harum praesentium provident minima enim dolor.
+            Quaerat porro quo consectetur omnis reiciendis dignissimos laborum accusamus, voluptatem nostrum quod exercitationem repellendus delectus ipsa incidunt dolor adipisci similique facilis, placeat, maiores id? Earum officia amet ad ipsum assumenda.
+            Explicabo vitae quae harum suscipit non, odit facilis magnam architecto deserunt dolorem maxime fugiat, cum laudantium et cumque natus obcaecati hic eius ex quasi itaque magni, similique voluptatibus. Dolorem, laudantium!
+            Repellat optio, reprehenderit placeat velit id deserunt error, quaerat sit asperiores vitae facilis corporis eius rem nemo. Quisquam modi culpa soluta voluptatum voluptate, totam possimus consectetur esse? Aperiam, beatae ad?
+            Repudiandae rem architecto quis illum perferendis, culpa omnis modi quod enim eligendi iusto minus aliquid labore dolor corporis optio iste mollitia debitis alias maiores vel reiciendis ullam? Quo, optio nesciunt.
+            Molestias voluptatibus doloremque ab quos doloribus distinctio repellat blanditiis, non earum aspernatur aut sequi laudantium aliquam alias optio repellendus nesciunt odit nihil fugit possimus eum assumenda exercitationem! Repellat, numquam cum.
+            Quae beatae saepe fugiat voluptas vitae amet, harum distinctio labore sunt porro commodi. Reiciendis error facere, accusantium placeat aliquam veritatis alias nesciunt, architecto itaque illo asperiores, sunt iure minus rerum!
+            Modi optio sint quibusdam quos eligendi suscipit ad quia quisquam, qui numquam odit laudantium alias, tempore similique, corporis maxime ducimus omnis. Corporis vel consectetur, asperiores suscipit facilis repudiandae quo voluptates?
+            Aspernatur dolorum, saepe reprehenderit similique cum ipsa, eos accusantium culpa ad facere esse enim commodi corrupti ratione beatae consectetur? Corporis dignissimos ipsam nemo asperiores laborum obcaecati error officiis reiciendis est.
+        </p>
     </section>
 </body>
 </html>
