Added html elements by javascript

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,61 +9,64 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Dongle&display=swap" rel="stylesheet">
+    <script src="script.js"></script>
 </head>
 <body>
-    <section id="welcome">
-        <img src="https://cutewallpaper.org/21/black-smokey-background/Dark-Smoky-Background-Best-Background-Images-HD-Wallpaper.png" alt="Background image">
-        <h1 class="welcomeTxt">Welcome to my website!</h1>
-        <button class="welcomeBtn">Click me</button>
-    </section>
-    <section id="about">
-        <article>
-            <h2>About us</h2>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia omnis expedita numquam nostrum, reiciendis quam sed unde, delectus repellendus laudantium suscipit eos maxime temporibus voluptates accusantium, repudiandae voluptatum dolor consequatur?
-                Doloribus rem aut quibusdam et voluptas qui dicta obcaecati perferendis placeat illo, officia, culpa error quasi! Quis atque vel debitis possimus quod vero nisi libero? Dolores quas eum excepturi fuga.
-                Consectetur magni ipsum ipsa quos natus, deleniti fugit dicta neque culpa error, dolorem illum quisquam velit fuga odit illo in enim accusantium optio, praesentium eveniet? Doloribus illum earum aperiam reiciendis.
-                Doloribus architecto laboriosam nihil. Est, at iusto! Ad, modi nostrum magni officiis eligendi doloribus deserunt! Magni dolorum sit, vitae maxime ullam sint reprehenderit cumque rem. Quasi rerum perferendis vel maxime.
-            </p>
-        </article>
-    </section>
-    <section id="services">
-        <ul>
-            <li>
-                <h2>Service 1</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, vel alias praesentium totam commodi autem harum dignissimos ipsa incidunt asperiores magni. A officia facilis id tenetur doloremque? Aut, tenetur blanditiis!</p>
-            </li>
-            <li>
-                <h2>Service 2</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui distinctio perspiciatis facere a quod consectetur, necessitatibus blanditiis tempora odio, deserunt, eligendi alias voluptate dolorum unde quos in! Alias, aspernatur veritatis.</p>
-            </li>
-            <li>
-                <h2>Service 3</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi obcaecati corrupti reiciendis exercitationem praesentium odit sequi quas eveniet ipsa omnis accusamus, alias sit expedita adipisci nulla odio beatae. Ipsam, vitae.</p>
-            </li>
-            <li>
-                <h2>Service 4</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora incidunt, nemo non blanditiis perspiciatis nesciunt iusto culpa, dolorum hic, modi doloribus aut temporibus autem illum quos? Atque quibusdam cum repellat.</p>
-            </li>
-            <li>
-                <h2>Service 5</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo fugiat id voluptas aspernatur dignissimos similique ipsum velit amet aliquam libero temporibus inventore eius eos pariatur doloribus illo, repudiandae blanditiis quidem!</p>
-            </li>
-            <li>
-                <h2>Service 6</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam, autem accusantium. Quae voluptates soluta aliquid dicta ullam, placeat eum magnam eaque accusantium, fugit libero aliquam perferendis minima officia! Iure, reprehenderit.
-                Iste corrupti debitis ad reprehenderit, veniam recusandae, inventore, similique ipsam fugit repellat omnis! Aut repellat dolorem illum sint dolore natus rem temporibus tempore numquam dolores maiores, perferendis ipsa est eaque.</p>
-            </li>
-        </ul>
-    </section>
-    <section id="contact">
-        <form>
-            <label for="username">Username:</label>
-            <input type="username" placeholder="Hellobello" id="username">
-            <label for="password">Password:</label>
-            <input type="password" placeholder="Password123" id="password">
-            <button>Sign in</button>
-        </form>
-    </section>
+    <div id="root">
+        <section id="welcome">
+            <img src="https://cutewallpaper.org/21/black-smokey-background/Dark-Smoky-Background-Best-Background-Images-HD-Wallpaper.png" alt="Background image">
+            <h1 class="welcomeTxt">Welcome to my website!</h1>
+            <button class="welcomeBtn">Click me</button>
+        </section>
+        <section id="about">
+            <article>
+                <h2>About us</h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia omnis expedita numquam nostrum, reiciendis quam sed unde, delectus repellendus laudantium suscipit eos maxime temporibus voluptates accusantium, repudiandae voluptatum dolor consequatur?
+                    Doloribus rem aut quibusdam et voluptas qui dicta obcaecati perferendis placeat illo, officia, culpa error quasi! Quis atque vel debitis possimus quod vero nisi libero? Dolores quas eum excepturi fuga.
+                    Consectetur magni ipsum ipsa quos natus, deleniti fugit dicta neque culpa error, dolorem illum quisquam velit fuga odit illo in enim accusantium optio, praesentium eveniet? Doloribus illum earum aperiam reiciendis.
+                    Doloribus architecto laboriosam nihil. Est, at iusto! Ad, modi nostrum magni officiis eligendi doloribus deserunt! Magni dolorum sit, vitae maxime ullam sint reprehenderit cumque rem. Quasi rerum perferendis vel maxime.
+                </p>
+            </article>
+        </section>
+        <section id="services">
+            <ul>
+                <li>
+                    <h2>Service 1</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, vel alias praesentium totam commodi autem harum dignissimos ipsa incidunt asperiores magni. A officia facilis id tenetur doloremque? Aut, tenetur blanditiis!</p>
+                </li>
+                <li>
+                    <h2>Service 2</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui distinctio perspiciatis facere a quod consectetur, necessitatibus blanditiis tempora odio, deserunt, eligendi alias voluptate dolorum unde quos in! Alias, aspernatur veritatis.</p>
+                </li>
+                <li>
+                    <h2>Service 3</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi obcaecati corrupti reiciendis exercitationem praesentium odit sequi quas eveniet ipsa omnis accusamus, alias sit expedita adipisci nulla odio beatae. Ipsam, vitae.</p>
+                </li>
+                <li>
+                    <h2>Service 4</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora incidunt, nemo non blanditiis perspiciatis nesciunt iusto culpa, dolorum hic, modi doloribus aut temporibus autem illum quos? Atque quibusdam cum repellat.</p>
+                </li>
+                <li>
+                    <h2>Service 5</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo fugiat id voluptas aspernatur dignissimos similique ipsum velit amet aliquam libero temporibus inventore eius eos pariatur doloribus illo, repudiandae blanditiis quidem!</p>
+                </li>
+                <li>
+                    <h2>Service 6</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam, autem accusantium. Quae voluptates soluta aliquid dicta ullam, placeat eum magnam eaque accusantium, fugit libero aliquam perferendis minima officia! Iure, reprehenderit.
+                    Iste corrupti debitis ad reprehenderit, veniam recusandae, inventore, similique ipsam fugit repellat omnis! Aut repellat dolorem illum sint dolore natus rem temporibus tempore numquam dolores maiores, perferendis ipsa est eaque.</p>
+                </li>
+            </ul>
+        </section>
+        <section id="contact">
+            <form>
+                <label for="username">Username:</label>
+                <input type="username" placeholder="Hellobello" id="username">
+                <label for="password">Password:</label>
+                <input type="password" placeholder="Password123" id="password">
+                <button>Sign in</button>
+            </form>
+        </section>
+    </div>
 </body>
 </html>
